tests/invalid/SetElemOf_Invalid_1.whiley
method main() -> bool:
    {int} xs = {1, 2, 3}
    if 1.23 in xs:
        return true
    else:
        return false
